force-app/main/default/objects/gateBServers__c/gateBServers__c.object-meta.xml
<CustomObject>
    <label>gateB Server</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>gateB Server Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gateB Servers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>