force-app/main/default/objects/gateBServers__c/fields/apiErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>apiErrorMessage__c</fullName>
    <description>Error message catched when accessing the server did fail.</description>
    <label>Version API Error Message</label>
    <length>200</length>
    <type>Text</type>
</CustomField>