force-app/main/default/objects/gateBServers__c/fields/apiuserpassword__c.field-meta.xml
<CustomField>
    <fullName>apiuserpassword__c</fullName>
    <description>Password used for user &quot;gateb.versionapi&quot;
If not set the standard password (in Lastpass) will be used.</description>
    <inlineHelpText>Password used for user &quot;gateb.versionapi&quot;
If not set the standard password (in Lastpass) will be used.</inlineHelpText>
    <label>Version Api User Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>