force-app/main/default/objects/gateBServers__c/fields/BM_version__c.field-meta.xml
<CustomField>
    <fullName>BM_version__c</fullName>
    <description>The Version of the current version of BrandMaker.</description>
    <label>BrandMaker Version</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>