force-app/main/default/objects/gateBServers__c/fields/Censhare_Client__c.field-meta.xml
<CustomField>
    <fullName>Censhare_Client__c</fullName>
    <label>Censhare Client</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Client</fullName>
            </value>
            <value>
                <fullName>Local (Java) Client</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>