force-app/main/default/objects/gateBServers__c/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kunde</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Kunde</relationshipLabel>
    <relationshipName>CustomerServerRelation</relationshipName>
    <type>Lookup</type>
</CustomField>