force-app/main/default/objects/gateBServers__c/fields/customNotes__c.field-meta.xml
<CustomField>
    <fullName>customNotes__c</fullName>
    <description>Custom text for any project or client specific information</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>