force-app/main/default/objects/gateBServers__c/fields/hasSupportContract__c.field-meta.xml
<CustomField>
    <fullName>hasSupportContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>gateB Support Vertrag</label>
    <type>Checkbox</type>
</CustomField>