force-app/main/default/objects/gateBServers__c/fields/InDesign_version__c.field-meta.xml
<CustomField>
    <fullName>InDesign_version__c</fullName>
    <description>The Indesign version which is used for this censhare system.</description>
    <label>InDesign Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InDesign CC 2017 (12.0): November 2, 2016</fullName>
            </value>
            <value>
                <fullName>InDesign CC 2017.1 (12.1): April 14, 2017</fullName>
            </value>
            <value>
                <fullName>InDesign CC 2018 (13.0): October 18, 2017</fullName>
            </value>
            <value>
                <fullName>InDesign CC 2018 (13.0.1): November 2017</fullName>
            </value>
            <value>
                <fullName>InDesign CC 2018.1 (13.1): March 2018</fullName>
            </value>
            <value>
                <fullName>InDesign CC 2018.2 (13.2): March 2018</fullName>
            </value>
            <value>
                <fullName>InDesign CC 2019 (14.0.1): November 2018</fullName>
            </value>
            <value>
                <fullName>InDesign CC 2019 (14.0.2): April 2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>