force-app/main/default/objects/gateBServers__c/fields/isTestSystem__c.field-meta.xml
<CustomField>
    <fullName>isTestSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ist Testsystem</label>
    <type>Checkbox</type>
</CustomField>