force-app/main/default/objects/gateBServers__c/fields/itContact__c.field-meta.xml
<CustomField>
    <fullName>itContact__c</fullName>
    <label>IT-Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>