force-app/main/default/objects/gateBServers__c/fields/lastUpdateVersionAPI__c.field-meta.xml
<CustomField>
    <fullName>lastUpdateVersionAPI__c</fullName>
    <label>Last update through Version API</label>
    <type>DateTime</type>
</CustomField>