force-app/main/default/objects/gateBServers__c/fields/Magnolia_modules__c.field-meta.xml
<CustomField>
    <fullName>Magnolia_modules__c</fullName>
    <label>Magnolia Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brand Portal</fullName>
            </value>
            <value>
                <fullName>Digital Marketing Center</fullName>
            </value>
            <value>
                <fullName>Event Manager</fullName>
            </value>
            <value>
                <fullName>Job Manager</fullName>
            </value>
            <value>
                <fullName>Language Center</fullName>
            </value>
            <value>
                <fullName>Marketing Planner</fullName>
            </value>
            <value>
                <fullName>Media Pool</fullName>
            </value>
            <value>
                <fullName>PIM</fullName>
            </value>
            <value>
                <fullName>Reporting Center</fullName>
            </value>
            <value>
                <fullName>Review Manager</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>Smart Access</fullName>
            </value>
            <value>
                <fullName>W2P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>