force-app/main/default/objects/gateBServers__c/fields/Magnolia_Version__c.field-meta.xml
<CustomField>
    <fullName>Magnolia_Version__c</fullName>
    <description>Please enter the current Magnolia Version.</description>
    <label>Magnolia Version</label>
    <length>8</length>
    <type>Text</type>
</CustomField>