force-app/main/default/objects/gateBServers__c/fields/mgnlBrandPortalIsInstalled__c.field-meta.xml
<CustomField>
    <fullName>mgnlBrandPortalIsInstalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magnolia BrandPortal installed</label>
    <type>Checkbox</type>
</CustomField>