force-app/main/default/objects/gateBServers__c/fields/serverType__c.field-meta.xml
<CustomField>
    <fullName>serverType__c</fullName>
    <label>Server Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>mgnlBrandPortalIsInstalled__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>serverType</valueSetName>
    </valueSet>
</CustomField>