force-app/main/default/objects/gateBServers__c/fields/ssl_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>ssl_expiration_date__c</fullName>
    <description>The expiration date of the ssl certificate will be tracked automatically for server type BrandMaker and Magnolia. 
Set manually for other server types.
The responsible TC will receive an e-mail notification 30 days prior expiration date.</description>
    <inlineHelpText>The expiration date of the ssl certificate will be tracked automatically for server type BrandMaker and Magnolia. 
Set manually for other server types.
The responsible TC will receive an e-mail notification 30 days prior expiration date.</inlineHelpText>
    <label>SSL Expiration Date</label>
    <type>Date</type>
</CustomField>