force-app/main/default/objects/gateBServers__c/fields/SSO__c.field-meta.xml
<CustomField>
    <fullName>SSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSO in use?</label>
    <type>Checkbox</type>
</CustomField>