force-app/main/default/objects/gateBServers__c/fields/systemBaseURL__c.field-meta.xml
<CustomField>
    <fullName>systemBaseURL__c</fullName>
    <label>System Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>