force-app/main/default/objects/gateBServers__c/fields/systemOwner__c.field-meta.xml
<CustomField>
    <fullName>systemOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Contact.Account.AccountNameShort__c</field>
            <operation>notEqual</operation>
            <value>GBCH</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>gateB Servers (System Owner)</relationshipLabel>
    <relationshipName>gBSystemOwnerTC</relationshipName>
    <type>Lookup</type>
</CustomField>