force-app/main/default/objects/gateBServers__c/fields/systemResponsibleTC__c.field-meta.xml
<CustomField>
    <fullName>systemResponsibleTC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Systemverantwortlicher TC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Systemverantwortlicher</relationshipLabel>
    <relationshipName>gBServerResponsibleTC</relationshipName>
    <type>Lookup</type>
</CustomField>